2004-03-30  Keith Packard  <keithp@keithp.com>

	Bug #387 - usr352@wanadoo.es (Pedro Gimeno)

	* src/fcxml.c: (FcStrtod):
	Missing braces around a block of code.  Correct fix was
	already in HEAD.

2004-03-28  Tor Lillqvist  <tml@iki.fi>

	Merge from HEAD:
	
	* src/fccfg.c (FcConfigCreate): If FcConfigHome() is NULL, use the
	temp folder. (I guess this branch doesn't crash on a NULL
	config->cache, but still a good idea to have a cache file, for
	performance, isn't it?)

	* src/Makefile.am (install-libtool-import-lib): Fix cut&paste error.

	* test/run-test.sh: Remove CRs from the out file before comparing
	(needed on Windows).

	* fontconfig-zip.in (DEVZIP): Add share/doc directory. Add Fc*.3
	man pages.

	* src/fontconfig.def.in: Move the LIBRARY and VERSION lines to the
	end, not to confuse libtool, which expects the EXPORTS line to be
	the first. Add FcConfigEnableHome.

	* src/fccfg.c: Check also for DLL_EXPORT as indication of being
	built as a DLL on Win32.

2004-03-10  Keith Packard  <keithp@keithp.com>

	* README:
	* fontconfig/fontconfig.h:
	* configure.in:
	Update to version 2.2.2

	* doc/Makefile.am:
	* fc-lang/Makefile.am:
	Make subdir build work
	
	* fontconfig/fcfreetype.h:
	* src/fcfreetype.c:
	Use new freetype include scheme

2003-11-10  Roozbeh Pournader  <roozbeh@sharif.edu>

	* src/fcxml.c:
	Fixed a bug "FcStrtod" in handling some cases with two-byte decimal
	separators.

2003-06-09  Keith Packard <keithp@keithp.com>

	* Tag version 2.2.1
	* add patch from HEAD to fix optimized path in FcLangSetIndex

2003-04-30  Keith Packard <keithp@keithp.com>

	* Typo in bitstream foundry name

2003-04-24  Keith Packard <keithp@keithp.com>

	* Eliminate italic_angle check for PS fonts

2003-04-23  James Henstridge  <james@daa.com.au>

	* doc/fontconfig-devel.sgml: close the <para> element.

	* doc/fcpattern.fncs: close the <para> element.

	* doc/func.sgml: close the <refsynopsisdiv> element.

2003-04-22  Keith Packard <keithp@keithp.com
